--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,12 @@
 <mat-toolbar color="primary">
-  My First MEAN App
+  <span>
+    <a routerLink="">My Posts!</a>
+  </span>
+  <span class="spacer"></span>
+  <ul>
+   <span>
+      <a mat-button routerLink="/create" routerLinkActive="mat-accent">Create New Post!</a>
+    </span>
+  </ul>
+
 </mat-toolbar>
