--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,12 +1,12 @@
   <mat-card>
-
-    <form (submit)="addnewPost(postForm)" #postForm="ngForm">
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+      <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf= "!isLoading">
         <mat-form-field>
             <input type="text"
                     matInput
                     name="title"
                     placeholder="Post Title"
-                    ngModel
+                    [ngModel]="post?.title"
                     required
                     #title="ngModel">
             <mat-error *ngIf="title.invalid">Please Enter a title!</mat-error>
@@ -17,7 +17,7 @@
                      matInput
                      name="content"
                      placeholder="Post Content"
-                     ngModel
+                     [ngModel]="post?.content"
                      required
                      #content="ngModel">
             </textarea>
@@ -29,8 +29,7 @@
           <button mat-raised-button color="primary" type="submit">
             Save Post!
           </button>
-    </form>
-
+      </form>
   </mat-card>
 <!-- <p>{{newPost}}</p> -->
 
