--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,34 +1,40 @@
   <mat-card>
     <mat-spinner *ngIf="isLoading"></mat-spinner>
-      <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf= "!isLoading">
+      <form [formGroup] = "form" (submit)="onSavePost()" *ngIf= "!isLoading">
         <mat-form-field>
             <input type="text"
                     matInput
                     name="title"
-                    placeholder="Post Title"
-                    [ngModel]="post?.title"
-                    required
-                    #title="ngModel">
-            <mat-error *ngIf="title.invalid">Please Enter a title!</mat-error>
-          </mat-form-field>
+                    formControlName = "title"
+                    placeholder="Post Title">
+            <mat-error *ngIf="form.get('title').invalid">Please Enter a title!</mat-error>
+        </mat-form-field>
+        
+        <div>
+          <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+          <input type="file" #filePicker (click)= "onImagepick($event)">
+          <div class="image-preview" *ngIf= "imagePreview && imagePreview != ''">
+            <img [src]="imagePreview" [alt]="form.value.title">
+          </div>
+        </div>
 
-          <mat-form-field>
+        <mat-form-field>
            <textarea rows="4"
                      matInput
                      name="content"
-                     placeholder="Post Content"
-                     [ngModel]="post?.content"
-                     required
-                     #content="ngModel">
-            </textarea>
-           <mat-error *ngIf="content.invalid">Please Enter some content!</mat-error>
+                     formControlName = "content"
+                     placeholder="Post Content">
+
+           <mat-error *ngIf="form.get('content').invalid">Please Enter some content!</mat-error>
+        </textarea>
+
+        </mat-form-field>
 
 
-          </mat-form-field>
+            <button mat-raised-button color="primary" type="submit">
+             Save Post!
+            </button>
 
-          <button mat-raised-button color="primary" type="submit">
-            Save Post!
-          </button>
       </form>
   </mat-card>
 <!-- <p>{{newPost}}</p> -->
