--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,23 @@
 <mat-toolbar color="primary">
   <span>
-    <a routerLink="">My Posts!</a>
+    <a mat-button routerLink="">My posts :)</a>
   </span>
   <span class="spacer"></span>
   <ul>
-   <span>
-      <a mat-button routerLink="/create" routerLinkActive="mat-accent">Create New Post!</a>
+      <span>
+         <a mat-button routerLink="/create" routerLinkActive="mat-accent">Create New Post</a>
+       </span>
+     </ul>
+
+  <ul>
+    <span>
+      <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
     </span>
   </ul>
+  <ul>
+      <span>
+        <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
+      </span>
+    </ul>
 
 </mat-toolbar>
