--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -4,6 +4,11 @@
     <mat-expansion-panel-header>
       {{post.title}}
     </mat-expansion-panel-header>
+
+    <div class="post-image">
+      <img [src]="post.imagePath" [alt]="post.title">
+    </div>
+
     <p>{{post.content}}</p>
     <mat-action-row>
       <a mat-button color="primary" [routerLink]="['/edit', post.id]" routerLinkActive="router-link-active" >EDIT</a>
@@ -11,4 +16,12 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
+
+<mat-paginator  *ngIf="posts.length > 0"
+                [length]= "totalPages"
+                [pageSize]= "postsPerPage"
+                [pageSizeOptions]= "pageSizeOptions"
+                (page)= "onChangedPage($event)">
+</mat-paginator>
+
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">Nothing posted yet!</p>
