--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -7,10 +7,10 @@ mat-spinner{
 input[type="file"]{
   visibility: hidden;
 }
-image-preview{
+.image-preview{
   height :5rem;
   margin: 1rem 0;
 }
-image-preview image{
+.image-preview img{
   height: 100%;
 }
