--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -9,14 +9,15 @@
                     placeholder="Post Title">
             <mat-error *ngIf="form.get('title').invalid">Please Enter a title!</mat-error>
         </mat-form-field>
-        
+
         <div>
           <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
-          <input type="file" #filePicker (click)= "onImagepick($event)">
-          <div class="image-preview" *ngIf= "imagePreview && imagePreview != ''">
-            <img [src]="imagePreview" [alt]="form.value.title">
+          <input type="file" #filePicker (change)= "onImagepicked($event)">
+          <div class="image-preview"
+               *ngIf= "imagePreview !== '' && imagePreview && form.get('image').valid">
+               <img [src]="imagePreview" [alt]="form.value.title">
           </div>
-        </div>
+        </div><br>
 
         <mat-form-field>
            <textarea rows="4"
@@ -37,5 +38,4 @@
 
       </form>
   </mat-card>
-<!-- <p>{{newPost}}</p> -->
 
